# hermes-odoo-adapter

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TESTING.md  THIRD_PARTY_LICENSES.md  project_mapping.json  pyproject.toml  pytest.ini
config/: README.md
contracts/context/: context.jsonld
contracts/schemas/: InventoryItem.schema.json  Project.schema.json  Reservation.schema.json  Shortage.schema.json
docker/: docker-compose.demo.yml  docker-compose.full.yml
docker/grafana-config/provisioning/dashboards/: hermes-manufacturing-ops.json  hermes-ros2-application.json  hermes-system-health.json  ros2-dds-monitoring.json
docker/odoo/: Dockerfile  entrypoint.sh  odoo.conf
docker/odoo-addons/hermes_theme/: __init__.py  __manifest__.py
docker/odoo-addons/hermes_theme/data/: company_data.xml
docker/odoo-config/: odoo.conf
docker/odoo-mock/: Dockerfile  app.py
docker/odoo-mock/data/: boms.json  products.json  stock.json
docker/odoo/custom_addons/hermes_electrical_seed/: __manifest__.py  hooks.py
docker/odoo/custom_addons/hermes_electrical_seed/data/: product_categories.xml  product_products.xml
docker/prometheus-config/: prometheus.yml
docs/: 01_arise_context.md  02_interfaces.md  03_installation_and_hello_world.md  04_basic_demo_how_to_use.md  05_role_in_demonstrator.md  D4_PLAN.md  D4_REPORT_DRAFT.md
examples/: README.md
examples/curl/: 01_healthz.sh  02_readyz.sh  03_orion_create_project.sh  04_list_entities.sh  05_consume_stock.sh  06_admin_inventory_sync.sh
examples/payloads/: inventory_item.json  project.json  reservation.json  shortage.json
examples/ros2/: 01_warehouse_pick.sh  02_warehouse_status.sh  03_warehouse_cancel.sh  04_stock_consume.sh  05_stock_produce.sh  06_intents_echo.sh
launch/: README.md  hermes_odoo_adapter.launch.py
media/: README.md  architecture_diagram.md  demo.cast  sequence_diagram.md  video_link.md
media/screenshots/: README.md
ros2_ws/: deps.repos
ros2_ws/src/hermes_msgs/: CMakeLists.txt  VENDORED_FROM.md  package.xml
ros2_ws/src/hermes_msgs/action/: DockTo.action  RequestTray.action  ReturnTray.action
ros2_ws/src/hermes_msgs/msg/: DetectedComponent.msg  GestureCommand.msg  InventoryUpdate.msg
ros2_ws/src/hermes_msgs/srv/: CalibrateVision.srv  CobotPickPlace.srv  ConsumeStock.srv  DetectComponents.srv  ProcessControl.srv  ProduceStock.srv  PushArticle.srv  WarehousePick.srv  WarehousePickCancel.srv  WarehousePickStatus.srv
ros2_ws/src/hermes_odoo_adapter_launch/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/hermes_odoo_adapter_launch/launch/: hermes_odoo_adapter.launch.py
scripts/: demo_walkthrough.sh  demo_walkthrough.tape  docker-entrypoint-ros2.sh  docker-entrypoint.sh  init_odoo_once.sh  normalize_env.py  seed_all.py  seed_odoo_demo.py  seed_orion_demo.py  seed_real_odoo.py
src/hermes_odoo_adapter/: __init__.py  __main__.py  main.py  odoo_client.py  orion_client.py  ros2_node.py  settings.py
src/hermes_odoo_adapter/models/: __init__.py  ngsi_models.py
src/hermes_odoo_adapter/utils/: __init__.py  idempotency.py  logging.py  metrics.py
src/hermes_odoo_adapter/warehouse/: __init__.py  base.py  factory.py  hanel_hostcom.py  hanel_soap.py  null.py
src/hermes_odoo_adapter/workers/: __init__.py  inventory_sync.py  project_sync.py  warehouse_sync.py
tests/: __init__.py  conftest.py  live_hanel_probe.py  test_hanel_hostcom.py
tests/integration/: test_api_endpoints.py  test_inventory_flow.py  test_project_flow.py
tests/unit/: test_health.py  test_models.py  test_odoo_client.py  test_orion_client.py  test_utils.py  test_workers.py
