[tool.poetry]
name = "hermes-odoo-adapter"
version = "0.1.0"
description = "FIWARE NGSI-LD adapter for Odoo ERP integration in HERMES manufacturing project"
authors = ["Francesco Solinas <francesco@yourcompany.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/yourorg/hermes_odoo_adapter"
repository = "https://github.com/yourorg/hermes_odoo_adapter"
documentation = "https://github.com/yourorg/hermes_odoo_adapter/docs"
keywords = ["fiware", "ngsi-ld", "odoo", "manufacturing", "erp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Monitoring",
]
packages = [
    { include = "hermes_odoo_adapter", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
httpx = "^0.25.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"
structlog = "^23.2.0"
prometheus-client = "^0.19.0"
asyncio-throttle = "^1.0.2"
tenacity = "^8.2.3"
jsonschema = "^4.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-env = "^1.1.1"
pytest-httpx = "^0.26.0"
ruff = "^0.1.6"
black = "^23.11.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
httpx = "^0.25.2"

[tool.poetry.scripts]
hermes-adapter = "hermes_odoo_adapter.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101", "ARG", "FBT"]

[tool.black]
target-version = ['py311']
line-length = 100
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=hermes_odoo_adapter",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
env = [
    "TESTING=true",
    "LOG_LEVEL=DEBUG",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["hermes_odoo_adapter"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
