<?xml version="1.0"?>
<package format="3">
  <name>hermes_msgs</name>
  <version>0.1.0</version>
  <description>Custom HERMES message, service, and action definitions for robotics and HRI.</description>
  <maintainer email="ops@hermes.local">HERMES</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
