<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hermes_odoo_adapter_launch</name>
  <version>0.4.0</version>
  <description>
    ament_python wrapper that makes the HERMES Odoo Adapter's launch
    file resolvable by ROS 2 package name. The adapter itself is a
    Poetry-managed Python application (see ../../../pyproject.toml);
    this package exists only so
    `ros2 launch hermes_odoo_adapter_launch hermes_odoo_adapter.launch.py`
    works alongside the path-based invocation documented in
    ../../../launch/README.md.
  </description>
  <maintainer email="francesco.solinas@olorin.tech">Francesco Solinas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
